# MagnifyingDevices

./: LICENSE  README.md
data/sceneBooks/: MAH00319.THM
simpleITKExample/src/: CMakeLists.txt  HelloWorld.cxx  dummy.cpp
src/: CMakeLists.txt  ImagesManager.cpp  ImagesManager.h  main.cpp
src/Demo2D/: CMakeLists.txt  main.cpp
src/Experiments/: CMakeLists.txt
src/Experiments/Experiment1/: CMakeLists.txt  main.cpp
src/Experiments/Experiment2/: CMakeLists.txt  main.cpp
src/TestMagnifyingDevices/: CMakeLists.txt  main.cpp
src/libMagnifyingDevices/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  Image.cpp  Image.h  ImagesManager.cpp  ImagesManager.h
